# smart-voice-kit

./: README.md  config.toml  pyproject.toml  setup.sh
app/api/: main.py
app/desktop_ui/: __init__.py  audio_controller.py  helpers.py  main.py  tasks.py  theme.py  transcription_controller.py  view.py  window.py
app/terminal_ui/: __init__.py  main.py
app/ui_desktop/: helpers.py  main.py  qt.py  tasks.py  view.py  window.py
app/web_ui/: main.py
core/: language.py  settings.py
core/asr/: base.py  factory.py  faster_whisper_engine.py
core/translation/: __init__.py  base.py  factory.py  identity_engine.py  m2m100_engine.py  opus_mt_engine.py  transformers_provider.py
schemas/: __init__.py  config.py  model.py  runtime.py  transcription.py
services/: __init__.py  audio_command_service.py  bootstrap.py  command_normalization.py  command_run_builder.py  command_service.py  install_model.py  pcs_assets.py  prepare_model.py  run_service.py  run_store.py  span_normalization.py  text_command_service.py
