[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "smart-voice-kit"
version = "0.1.0"
description = "Offline-first voice toolkit for smart-device and local assistant prototypes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "faster-whisper>=1.1.0",
    "pydantic>=2.8.0",
    "PySide6>=6.8.0",
    "python-multipart>=0.0.9",
    "rich>=13.7.0",
    "streamlit>=1.39.0",
    "typer>=0.12.3",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
]

[project.scripts]
voice-cli = "app.tui.main:run"
voice-api = "app.api.main:run"
voice-desktop = "app.ui_desktop.main:run"

[tool.hatch.build.targets.wheel]
packages = ["app", "core", "services", "schemas"]

[tool.hatch.build.targets.sdist]
include = [
    "/app",
    "/core",
    "/services",
    "/schemas",
    "/README.md",
    "/config.toml",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
