[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "ivoice"
version = "0.1.0"
description = "Instruction-driven speech generation foundation with local-first audio capture and analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.26.0",
    "pydantic>=2.8.0",
    "rich>=13.7.0",
    "typer>=0.12.3",
]

[project.optional-dependencies]
asr = [
    "faster-whisper>=1.1.0",
]
translation = [
    "lingua-language-detector>=2.0.2",
    "langdetect>=1.0.9",
    "sacremoses>=0.1.1",
    "sentencepiece>=0.2.0",
    "torch>=2.3.0",
    "transformers>=4.46.0",
]
pcs = [
    "ftfy>=6.3.1",
    "onnxruntime>=1.19.0",
    "punctuators",
    "sentencepiece>=0.2.0",
    "torch>=2.3.0",
    "transformers>=4.46.0",
]
desktop = [
    "PySide6>=6.8.0",
]
web = [
    "streamlit>=1.39.0",
]
api = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
]
dev = [
    "ruff>=0.6.0",
]

[project.scripts]
ivoice-cli = "app.terminal_ui.main:run"
ivoice-api = "app.api.main:run"
ivoice-desktop = "app.desktop_ui.main:run"
ivoice-web = "services.web_app:run"
ivoice-install-model = "services.install_model:run"

[tool.hatch.build.targets.wheel]
packages = ["app", "core", "services", "schemas"]

[tool.hatch.build.targets.sdist]
include = [
    "/app",
    "/core",
    "/services",
    "/schemas",
    "/README.md",
    "/config.toml",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
